[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/temp_assets/buttonhover.jpg" type="Texture" id=1]
[ext_resource path="res://assets/temp_assets/buttonpressed.jpg" type="Texture" id=2]
[ext_resource path="res://assets/temp_assets/buttonnormal.png" type="Texture" id=3]
[ext_resource path="res://scenes/UI/main_menu/options.gd" type="Script" id=4]
[ext_resource path="res://addons/SliderLabel/SliderLabel.gd" type="Script" id=5]

[sub_resource type="InputEventAction" id=4]
action = "pause"

[sub_resource type="ShortCut" id=5]
shortcut = SubResource( 4 )

[node name="options" type="ColorRect"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 101.0
margin_top = 25.0
margin_right = -102.0
margin_bottom = -25.0
color = Color( 0.737255, 0.737255, 0.737255, 1 )
script = ExtResource( 4 )

[node name="ReferenceRect" type="ReferenceRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1.0
margin_bottom = -1.0
rect_min_size = Vector2( 516, 489 )
border_color = Color( 0.462745, 0.462745, 0.462745, 1 )
border_width = 4.8
editor_only = false

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="spacer" type="CenterContainer" parent="VBoxContainer"]
margin_right = 757.0
margin_bottom = 10.0
rect_min_size = Vector2( 0, 10 )

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
margin_top = 14.0
margin_right = 757.0
margin_bottom = 28.0

[node name="Label" type="Label" parent="VBoxContainer/CenterContainer"]
margin_left = 327.0
margin_right = 429.0
margin_bottom = 14.0
text = "OPTIONS MENU"

[node name="TabContainer" type="TabContainer" parent="VBoxContainer"]
margin_top = 32.0
margin_right = 757.0
margin_bottom = 492.0
rect_min_size = Vector2( 0, 460 )
tab_align = 0
use_hidden_tabs_for_min_size = true

[node name="Video" type="Tabs" parent="VBoxContainer/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/TabContainer/Video"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/TabContainer/Video/CenterContainer"]
margin_left = 230.0
margin_top = 178.0
margin_right = 519.0
margin_bottom = 246.0
columns = 2

[node name="Label" type="Label" parent="VBoxContainer/TabContainer/Video/CenterContainer/GridContainer"]
margin_top = 13.0
margin_right = 135.0
margin_bottom = 27.0
text = "Fullscreen"

[node name="fullscreen_button" type="CheckButton" parent="VBoxContainer/TabContainer/Video/CenterContainer/GridContainer"]
unique_name_in_owner = true
margin_left = 139.0
margin_right = 289.0
margin_bottom = 40.0
rect_min_size = Vector2( 150, 0 )
pressed = true

[node name="Label4" type="Label" parent="VBoxContainer/TabContainer/Video/CenterContainer/GridContainer"]
margin_top = 49.0
margin_right = 135.0
margin_bottom = 63.0
rect_min_size = Vector2( 135, 0 )
text = "Target FPS"

[node name="force_fps_box" type="SpinBox" parent="VBoxContainer/TabContainer/Video/CenterContainer/GridContainer"]
unique_name_in_owner = true
margin_left = 139.0
margin_top = 44.0
margin_right = 289.0
margin_bottom = 68.0
min_value = -1.0
max_value = 240.0
value = 60.0

[node name="Audio" type="Tabs" parent="VBoxContainer/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/TabContainer/Audio"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/TabContainer/Audio/CenterContainer"]
margin_left = 205.0
margin_top = 194.0
margin_right = 544.0
margin_bottom = 230.0
columns = 2

[node name="Label" type="Label" parent="VBoxContainer/TabContainer/Audio/CenterContainer/GridContainer"]
margin_top = 1.0
margin_right = 135.0
margin_bottom = 15.0
text = "Master Volume"

[node name="master_volume_slider" type="HSlider" parent="VBoxContainer/TabContainer/Audio/CenterContainer/GridContainer"]
unique_name_in_owner = true
margin_left = 139.0
margin_right = 339.0
margin_bottom = 16.0
rect_min_size = Vector2( 200, 0 )
value = 1.0
tick_count = 11
ticks_on_borders = true

[node name="SliderLabel" type="Label" parent="VBoxContainer/TabContainer/Audio/CenterContainer/GridContainer/master_volume_slider"]
margin_right = 24.0
margin_bottom = 14.0
size_flags_horizontal = 4
text = "100"
align = 1
valign = 1
script = ExtResource( 5 )
__meta__ = {
"_edit_initialized_": true
}
visibility_rule = 0
custom_format = "%d%%"

[node name="Label4" type="Label" parent="VBoxContainer/TabContainer/Audio/CenterContainer/GridContainer"]
margin_top = 21.0
margin_right = 135.0
margin_bottom = 35.0
rect_min_size = Vector2( 135, 0 )
text = "Music Volume"

[node name="music_volume_slider" type="HSlider" parent="VBoxContainer/TabContainer/Audio/CenterContainer/GridContainer"]
unique_name_in_owner = true
margin_left = 139.0
margin_top = 20.0
margin_right = 339.0
margin_bottom = 36.0
rect_min_size = Vector2( 200, 0 )
tick_count = 11
ticks_on_borders = true

[node name="SliderLabel" type="Label" parent="VBoxContainer/TabContainer/Audio/CenterContainer/GridContainer/music_volume_slider"]
margin_right = 24.0
margin_bottom = 14.0
size_flags_horizontal = 4
text = "100"
align = 1
valign = 1
script = ExtResource( 5 )
__meta__ = {
"_edit_initialized_": true
}
visibility_rule = 0

[node name="Gameplay" type="Tabs" parent="VBoxContainer/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/TabContainer/Gameplay"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="vbox" type="VBoxContainer" parent="VBoxContainer/TabContainer/Gameplay/CenterContainer"]
margin_left = 268.0
margin_top = 132.0
margin_right = 480.0
margin_bottom = 292.0

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/TabContainer/Gameplay/CenterContainer/vbox"]
margin_right = 212.0
margin_bottom = 112.0
custom_constants/hseparation = 39
columns = 2

[node name="Label" type="Label" parent="VBoxContainer/TabContainer/Gameplay/CenterContainer/vbox/GridContainer"]
margin_top = 5.0
margin_right = 97.0
margin_bottom = 19.0
text = "Player FOV"

[node name="player_fov" type="SpinBox" parent="VBoxContainer/TabContainer/Gameplay/CenterContainer/vbox/GridContainer"]
unique_name_in_owner = true
margin_left = 136.0
margin_right = 212.0
margin_bottom = 24.0
min_value = 1.0
value = 70.0

[node name="Label2" type="Label" parent="VBoxContainer/TabContainer/Gameplay/CenterContainer/vbox/GridContainer"]
margin_top = 41.0
margin_right = 97.0
margin_bottom = 55.0
text = "Invert Mouse Y"

[node name="invert_mouse_y" type="CheckButton" parent="VBoxContainer/TabContainer/Gameplay/CenterContainer/vbox/GridContainer"]
unique_name_in_owner = true
margin_left = 136.0
margin_top = 28.0
margin_right = 212.0
margin_bottom = 68.0

[node name="Label3" type="Label" parent="VBoxContainer/TabContainer/Gameplay/CenterContainer/vbox/GridContainer"]
margin_top = 85.0
margin_right = 97.0
margin_bottom = 99.0
text = "Invert Mouse X"

[node name="invert_mouse_x" type="CheckButton" parent="VBoxContainer/TabContainer/Gameplay/CenterContainer/vbox/GridContainer"]
unique_name_in_owner = true
margin_left = 136.0
margin_top = 72.0
margin_right = 212.0
margin_bottom = 112.0

[node name="clear_save" type="Button" parent="VBoxContainer/TabContainer/Gameplay/CenterContainer/vbox"]
margin_top = 116.0
margin_right = 212.0
margin_bottom = 136.0
rect_min_size = Vector2( 150, 0 )
text = "Completely Wipe Save"

[node name="full_save" type="Button" parent="VBoxContainer/TabContainer/Gameplay/CenterContainer/vbox"]
margin_top = 140.0
margin_right = 212.0
margin_bottom = 160.0
text = "Completely Fill Save (dev only)"

[node name="TextureButton" type="TextureButton" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -32.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
shortcut = SubResource( 5 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 1 )
expand = true

[node name="are_you_sure" type="ColorRect" parent="."]
pause_mode = 2
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -127.5
margin_top = -85.0
margin_right = 127.5
margin_bottom = 117.0
rect_min_size = Vector2( 190, 127 )
rect_pivot_offset = Vector2( 250, 250 )
color = Color( 0.737255, 0.737255, 0.737255, 1 )

[node name="ColorRect" type="ColorRect" parent="are_you_sure"]
show_behind_parent = true
anchor_left = -1.38
anchor_top = -1.088
anchor_right = 2.384
anchor_bottom = 2.094
margin_left = -0.0999756
margin_top = -0.0399933
margin_right = 0.0799561
margin_bottom = -0.980011
color = Color( 0, 0, 0, 0.513726 )

[node name="ReferenceRect" type="ReferenceRect" parent="are_you_sure"]
anchor_right = 1.0
anchor_bottom = 1.0
border_color = Color( 0.462745, 0.462745, 0.462745, 1 )
border_width = 4.8
editor_only = false

[node name="VBoxContainer" type="VBoxContainer" parent="are_you_sure"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 190, 0 )

[node name="spacer" type="CenterContainer" parent="are_you_sure/VBoxContainer"]
margin_right = 255.0
margin_bottom = 10.0
rect_min_size = Vector2( 190, 10 )

[node name="CenterContainer" type="CenterContainer" parent="are_you_sure/VBoxContainer"]
margin_top = 14.0
margin_right = 255.0
margin_bottom = 28.0
rect_min_size = Vector2( 190, 0 )

[node name="Label" type="Label" parent="are_you_sure/VBoxContainer/CenterContainer"]
margin_left = 84.0
margin_right = 171.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Are you sure?"

[node name="spacer2" type="CenterContainer" parent="are_you_sure/VBoxContainer"]
margin_top = 32.0
margin_right = 255.0
margin_bottom = 57.0
rect_min_size = Vector2( 190, 25 )

[node name="CenterContainer3" type="CenterContainer" parent="are_you_sure/VBoxContainer"]
margin_top = 61.0
margin_right = 255.0
margin_bottom = 174.0
rect_min_size = Vector2( 190, 0 )

[node name="VBoxContainer" type="VBoxContainer" parent="are_you_sure/VBoxContainer/CenterContainer3"]
margin_left = 27.0
margin_right = 227.0
margin_bottom = 113.0
custom_constants/separation = 13

[node name="CenterContainer3" type="CenterContainer" parent="are_you_sure/VBoxContainer/CenterContainer3/VBoxContainer"]
margin_right = 200.0
margin_bottom = 50.0

[node name="delete_my_save" type="Button" parent="are_you_sure/VBoxContainer/CenterContainer3/VBoxContainer/CenterContainer3"]
margin_right = 200.0
margin_bottom = 50.0
rect_min_size = Vector2( 200, 50 )
text = "Delete my save"

[node name="CenterContainer4" type="CenterContainer" parent="are_you_sure/VBoxContainer/CenterContainer3/VBoxContainer"]
margin_top = 63.0
margin_right = 200.0
margin_bottom = 113.0

[node name="dont_delete_my_save" type="Button" parent="are_you_sure/VBoxContainer/CenterContainer3/VBoxContainer/CenterContainer4"]
margin_right = 200.0
margin_bottom = 50.0
rect_min_size = Vector2( 200, 50 )
text = "Hold on, don't do that"

[connection signal="toggled" from="VBoxContainer/TabContainer/Video/CenterContainer/GridContainer/fullscreen_button" to="." method="_on_fullscreen_button_toggled"]
[connection signal="value_changed" from="VBoxContainer/TabContainer/Audio/CenterContainer/GridContainer/master_volume_slider" to="." method="_on_master_volume_slider_value_changed"]
[connection signal="value_changed" from="VBoxContainer/TabContainer/Audio/CenterContainer/GridContainer/music_volume_slider" to="." method="_on_music_volume_slider_value_changed"]
[connection signal="pressed" from="VBoxContainer/TabContainer/Gameplay/CenterContainer/vbox/clear_save" to="." method="_on_clear_save_pressed"]
[connection signal="pressed" from="VBoxContainer/TabContainer/Gameplay/CenterContainer/vbox/full_save" to="." method="_on_full_save_pressed"]
[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="are_you_sure/VBoxContainer/CenterContainer3/VBoxContainer/CenterContainer3/delete_my_save" to="." method="_on_delete_my_save_pressed"]
[connection signal="pressed" from="are_you_sure/VBoxContainer/CenterContainer3/VBoxContainer/CenterContainer4/dont_delete_my_save" to="." method="_on_dont_delete_my_save_pressed"]
